--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -32,8 +32,8 @@
 	\subsection{Riferimenti}
 		\subsubsection{Normativi}
 		\begin{itemize}
-			\item \emph{\NdP};
-			\item \textbf{Capitolato d'Appalto C6: \proj}:
+			\item \NdP;
+			\item \textbf{Capitolato d'Appalto C6, \proj}:
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf};
 			\item \textbf{Standard ISO/IEC 12207:2008}:
 			\\ \url{http://ieeexplore.ieee.org/document/4475826/};
@@ -47,9 +47,9 @@
 		
 		\subsubsection{Informativi}
 		\begin{itemize}
-			\item \textbf{Analisi dei Requisiti: }\emph{\AdR};
-			\item \textbf{Piano di Progetto: }\emph{\PdP};
-			\item \textbf{Glossario: }\emph{\Glossario};
+			\item \textbf{Analisi dei Requisiti}: \AdR;
+			\item \textbf{Piano di Progetto}: \PdP;
+			\item \textbf{Glossario}: \Glossario;
 			\item \textbf{Indice di Gulpease}:
 			\\ \url{http://it.wikipedia.org/wiki/Indice_Gulpease};
 			\item \textbf{Regole del Progetto Didattico}:
