--- a/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
+++ b/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
@@ -32,22 +32,22 @@
 	\subsection{Riferimenti}
 		\subsubsection{Normativi}
 		\begin{itemize}
-			\item \textbf{Norme di Progetto: } \emph{\NdP};
+			\item \textbf{Norme di Progetto}: \NdP;
 		\end{itemize}
 		\subsubsection{Informativi}
 		\begin{itemize}
-			\item \textbf{Glossario: }\emph{\Glossario};
-			\item \textbf{Capitolato d'Appalto C1:} \emph{APIM}: An API Market Platform
+			\item \textbf{Glossario}: \Glossario;
+			\item \textbf{Capitolato d'Appalto C1}, \emph{APIM}: An API Market Platform
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C1.pdf};
-			\item \textbf{Capitolato d'Appalto C2:} \emph{AtAVi}: Accoglienza tramite Assistente Virtuale
+			\item \textbf{Capitolato d'Appalto C2}, \emph{AtAVi}: Accoglienza tramite Assistente Virtuale
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C2.pdf};
-			\item \textbf{Capitolato d'Appalto C3:} \emph{DeGeOP}: A Designer and Geo-localizer Web App for Organizational Plants
+			\item \textbf{Capitolato d'Appalto C3}, \emph{DeGeOP}: A Designer and Geo-localizer Web App for Organizational Plants
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C3.pdf};
-			\item \textbf{Capitolato d'Appalto C4:} \emph{eBread}: applicazione di lettura per dislessici
+			\item \textbf{Capitolato d'Appalto C4}, \emph{eBread}: applicazione di lettura per dislessici
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C4.pdf};
-			\item \textbf{Capitolato d'Appalto C5:} \emph{Monolith}: an interactive bubble provider
+			\item \textbf{Capitolato d'Appalto C5}, \emph{Monolith}: an interactive bubble provider
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C5.pdf};
-			\item \textbf{Capitolato d'Appalto C6:} \emph{SWEDesigner}: editor di diagrammi UML con generazione di codice
+			\item \textbf{Capitolato d'Appalto C6}, \emph{SWEDesigner}: editor di diagrammi UML con generazione di codice
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf};
 		\end{itemize}
 
@@ -58,7 +58,7 @@
 		\subsubsection{Descrizione}
 		Lo scopo principale del capitolato è quello di realizzare un'\gloss{applicazione web} composta da almeno due disegnatori
 		ed un coordinatore, che permetta all'utente di costruire diagrammi \gloss{UML} rappresentativi del prodotto da svilupparsi e generi a partire da essi codice 
-		\gloss{Java} o \gloss{Javascript}.
+		\gloss{Java} o \gloss{JavaScript}.
 		\\In particolare l'\gloss{editor} dovrebbe concentrarsi su uno specifico dominio applicativo (l'esempio fornito nel capitolato d'appalto è relativo ai software 
 		di giochi da tavolo) per andare a costituire una sorta di \gloss{framework} per la produzione della relativa famiglia di prodotti.
 		
