lettera post rev 2

--- a/doc/Esterni/Lettera/Lettera_post_revisione.tex
+++ b/doc/Esterni/Lettera/Lettera_post_revisione.tex
@@ -26,9 +26,11 @@ via Trieste, 63\\
 
 \opening{Egregio Professor Vardanega,}
 
-Con la presente, il gruppo \hx{} Le comunica che ha rimediato alle non-conformità presenti nel Piano di Progetto inviatoLe in data 11 gennaio (documento \PdP).
+Con la presente, il gruppo \hx{} Le comunica che ha rimediato alla non-conformità presente nel piano di progetto inviatoLe in data 11 gennaio, impegnandosi a rispettare il vincolo di ore previsto.
 
-In particolare, abbiamo rivalutato gli sforzi necessari per la progettazione. Infatti, in questo periodo era previsto che ogni ruolo richiedesse almeno il doppio di ore rispetto agli stessi ruoli negli altri periodi del progetto; abbiamo quindi rivisto al ribasso le ore di lavoro pianificate per alcuni componenti del gruppo, al fine di rientrare nel massimo numero di ore spendibili nel progetto didattico (105 ore a persona).
+In particolare, abbiamo deciso di rivalutare gli sforzi necessari per la progettazione, trovando la relativa preventivazione troppo pessimistica: il ruolo di progettista, infatti, è quello che richiede più del doppio di ore rispetto a qualsiasi altro ruolo all'interno del progetto. Abbiamo dunque rivisto al ribasso le ore di lavoro pianificate per alcuni componenti del gruppo, le quali comunque ammontano in totale a 16 ore, in modo da rispettare il vincolo totale di 105 ore/persona rendicontate massime. Non è stato dunque necessario diminuire il numero di requisiti del nostro prodottoM confidiamo nel fatto che questa sia stata una buona scelta.
+
+Ci impegniamo, dunque, a rispettare gli aggiustamenti apportati al piano di progetto, che Lei potrà leggere assieme agli altri documenti entro la data della prossima revisione.
 
 \closing{Distinti Saluti,}
 
